--- a/package.json
+++ b/package.json
@@ -16,11 +16,13 @@
   "author": "",
   "license": "ISC",
   "devDependencies": {
+    "@types/figlet": "^1.5.8",
     "typescript": "^5.6.2"
   },
   "dependencies": {
     "@types/node": "^22.5.5",
     "dotenv": "^16.4.5",
+    "figlet": "^1.7.0",
     "ts-node": "^10.9.2"
   }
 }
